# email-client

./: CMakeLists.txt
docker/dovecot/: Makefile
docker/dovecot/image/: Dockerfile  dovecot.conf
docs/arc42/: arc42-template-EN.md
email-client/: main.cpp
email-client.xcodeproj/: project.pbxproj
email-client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
email-client.xcodeproj/xcuserdata/steffen.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: MailAccount.cpp  MailAccount.h  main.cpp
src/imap-client/: Connection.cpp  Connection.h  Protocol.cpp  Protocol.h
